tp1/tp-minikube/myservice-loadbalancing-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myservicetp1
  name: myservicetp1
spec:
  ports:
    - nodePort: 30945
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: myservicetp1
  type: LoadBalancer
