tp1/tp-minikube/myservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: myservicetp1
spec:
  ports:
    - nodePort: 31281
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: myservicetp1
  type: NodePort
